results/SVCOMP/specgen/log-StringValueOf03-2024_03_03_06_29_21.txt
public class StringValueOf03 {
  //@ requires arg != null;
  //@ requires arg.length() >= 8;
  //@ ensures \result <==> tmp.equals("fbbl");
  public static boolean f(String arg) {
    if (arg.length() < 8)
      return false;
    char[] charArray = {
      arg.charAt(0), arg.charAt(1), arg.charAt(2),
      arg.charAt(3), arg.charAt(4), arg.charAt(5),
      arg.charAt(6), arg.charAt(7)
    };
    String tmp = String.valueOf(charArray, 3, 3);
    return tmp.equals("fbbl");
  }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:4: error: cannot find symbol
  //@ ensures \result <==> tmp.equals("fbbl");
                           ^
  symbol:   variable tmp
  location: class StringValueOf03
1 error

public class StringValueOf03 {
  //@ requires arg != null;
  //@ requires arg.length() >= 8;
  //@ ensures \result <==> tmp.equals("fbbl");
  public static boolean f(String arg) {
    String tmp = "";
    if (arg.length() < 8)
      return false;
    char[] charArray = {
      arg.charAt(0), arg.charAt(1), arg.charAt(2),
      arg.charAt(3), arg.charAt(4), arg.charAt(5),
      arg.charAt(6), arg.charAt(7)
    };
    tmp = String.valueOf(charArray, 3, 3);
    return tmp.equals("fbbl");
  }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:4: error: cannot find symbol
  //@ ensures \result <==> tmp.equals("fbbl");
                           ^
  symbol:   variable tmp
  location: class StringValueOf03
1 error

public class StringValueOf03 {
  //@ requires arg != null;
  //@ requires arg.length() >= 8;
  //@ ensures \result <==> \result.equals("fbbl");
  public static boolean f(String arg) {
    String tmp = "";
    if (arg.length() < 8)
      return false;
    char[] charArray = {
      arg.charAt(0), arg.charAt(1), arg.charAt(2),
      arg.charAt(3), arg.charAt(4), arg.charAt(5),
      arg.charAt(6), arg.charAt(7)
    };
    tmp = String.valueOf(charArray, 3, 3);
    return tmp.equals("fbbl");
  }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:4: error: boolean cannot be dereferenced
  //@ ensures \result <==> \result.equals("fbbl");
                                  ^
1 error

public class StringValueOf03 {
  //@ requires arg != null;
  //@ requires arg.length() >= 8;
  //@ ensures \result == tmp.equals("fbbl");
  public static boolean f(String arg) {
    String tmp = "";
    if (arg.length() < 8)
      return false;
    char[] charArray = {
      arg.charAt(0), arg.charAt(1), arg.charAt(2),
      arg.charAt(3), arg.charAt(4), arg.charAt(5),
      arg.charAt(6), arg.charAt(7)
    };
    tmp = String.valueOf(charArray, 3, 3);
    return tmp.equals("fbbl");
  }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:4: error: cannot find symbol
  //@ ensures \result == tmp.equals("fbbl");
                         ^
  symbol:   variable tmp
  location: class StringValueOf03
1 error

public class StringValueOf03 {
  //@ requires arg != null;
  //@ requires arg.length() >= 8;
  //@ ensures \result == tmp.equals("fbbl");
  public static boolean f(String arg) {
    String tmp = "";
    if (arg.length() < 8)
      return false;
    char[] charArray = {
      arg.charAt(0), arg.charAt(1), arg.charAt(2),
      arg.charAt(3), arg.charAt(4), arg.charAt(5),
      arg.charAt(6), arg.charAt(7)
    };
    tmp = String.valueOf(charArray, 3, 3);
    return tmp.equals("fbbl");
  }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:4: error: cannot find symbol
  //@ ensures \result == tmp.equals("fbbl");
                         ^
  symbol:   variable tmp
  location: class StringValueOf03
1 error

public class StringValueOf03 {
  //@ requires arg != null;
  //@ requires arg.length() >= 8;
  //@ ensures \result == tmp.equals("fbbl");
  public static boolean f(String arg) {
    String tmp = "";
    if (arg.length() < 8)
      return false;
    char[] charArray = {
      arg.charAt(0), arg.charAt(1), arg.charAt(2),
      arg.charAt(3), arg.charAt(4), arg.charAt(5),
      arg.charAt(6), arg.charAt(7)
    };
    tmp = String.valueOf(charArray, 3, 3);
    return tmp.equals("fbbl");
  }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:4: error: cannot find symbol
  //@ ensures \result == tmp.equals("fbbl");
                         ^
  symbol:   variable tmp
  location: class StringValueOf03
1 error

public class StringValueOf03 {
  //@ requires arg != null;
  //@ requires arg.length() >= 8;
  //@ ensures \result == true <==> tmp.equals("fbbl");
  public static boolean f(String arg) {
    String tmp = "";
    if (arg.length() < 8)
      return false;
    char[] charArray = {
      arg.charAt(0), arg.charAt(1), arg.charAt(2),
      arg.charAt(3), arg.charAt(4), arg.charAt(5),
      arg.charAt(6), arg.charAt(7)
    };
    tmp = String.valueOf(charArray, 3, 3);
    return tmp.equals("fbbl");
  }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:4: error: cannot find symbol
  //@ ensures \result == true <==> tmp.equals("fbbl");
                                   ^
  symbol:   variable tmp
  location: class StringValueOf03
1 error

public class StringValueOf03 {
  //@ requires arg != null;
  //@ requires arg.length() >= 8;
  //@ ensures \result == true <==> tmp.equals("fbbl");
  public static boolean f(String arg) {
    String tmp = "";
    if (arg.length() < 8)
      return false;
    char[] charArray = {
      arg.charAt(0), arg.charAt(1), arg.charAt(2),
      arg.charAt(3), arg.charAt(4), arg.charAt(5),
      arg.charAt(6), arg.charAt(7)
    };
    tmp = String.valueOf(charArray, 3, 3);
    return tmp.equals("fbbl");
  }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:4: error: cannot find symbol
  //@ ensures \result == true <==> tmp.equals("fbbl");
                                   ^
  symbol:   variable tmp
  location: class StringValueOf03
1 error

public class StringValueOf03 {
  //@ requires arg != null;
  //@ requires arg.length() >= 8;
  //@ ensures \result == true <==> tmp.equals("fbbl");
  public static boolean f(String arg) {
    String tmp = "";
    if (arg.length() < 8)
      return false;
    char[] charArray = {
      arg.charAt(0), arg.charAt(1), arg.charAt(2),
      arg.charAt(3), arg.charAt(4), arg.charAt(5),
      arg.charAt(6), arg.charAt(7)
    };
    tmp = String.valueOf(charArray, 3, 3);
    return tmp.equals("fbbl");
  }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:4: error: cannot find symbol
  //@ ensures \result == true <==> tmp.equals("fbbl");
                                   ^
  symbol:   variable tmp
  location: class StringValueOf03
1 error

public class StringValueOf03 {
  //@ requires arg != null;
  //@ requires arg.length() >= 8;
  //@ ensures \result == true <==> tmp.equals("fbbl");
  public static boolean f(String arg) {
    String tmp = "";
    if (arg.length() < 8)
      return false;
    char[] charArray = {
      arg.charAt(0), arg.charAt(1), arg.charAt(2),
      arg.charAt(3), arg.charAt(4), arg.charAt(5),
      arg.charAt(6), arg.charAt(7)
    };
    tmp = String.valueOf(charArray, 3, 3);
    return tmp.equals("fbbl");
  }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:4: error: cannot find symbol
  //@ ensures \result == true <==> tmp.equals("fbbl");
                                   ^
  symbol:   variable tmp
  location: class StringValueOf03
1 error

public class StringValueOf03 {
  //@ requires arg != null;
  //@ requires arg.length() >= 8;
  //@ ensures \result == true <==> tmp.equals("fbbl");  
  public static boolean f(String arg) {
    String tmp = "";
    if (arg.length() < 8)
      return false;
    char[] charArray = {
      arg.charAt(0), arg.charAt(1), arg.charAt(2),
      arg.charAt(3), arg.charAt(4), arg.charAt(5),
      arg.charAt(6), arg.charAt(7)
    };
    tmp = String.valueOf(charArray, 3, 3);
    return tmp.equals("fbbl");
  }
}

/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:4: error: cannot find symbol
  //@ ensures \result == true <==> tmp.equals("fbbl");  
                                   ^
  symbol:   variable tmp
  location: class StringValueOf03
1 error

public class StringValueOf03 {
  //@ requires arg != null;
  //@ requires arg.length() >= 8;
 
  public static boolean f(String arg) {
    String tmp = "";
    if (arg.length() < 8)
      return false;
    char[] charArray = {
      arg.charAt(0), arg.charAt(1), arg.charAt(2),
      arg.charAt(3), arg.charAt(4), arg.charAt(5),
      arg.charAt(6), arg.charAt(7)
    };
    tmp = String.valueOf(charArray, 3, 3);
    return tmp.equals("fbbl");
  }
}

/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:18: verify: The prover cannot establish an assertion (UndefinedCalledMethodPrecondition: /home/max/Documents/JMLGPT/openjml/specs/java/lang/CharSequence.jml:57:) in method f
/home/max/Documents/JMLGPT/openjml/specs/java/lang/CharSequence.jml:57: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StringValueOf03.java:18:
        public static pure helper model boolean equal(char[] a, \bigint astart, char[] b, \bigint bstart, \bigint len);
                                                ^
/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:16: verify: Associated method exit
  }
   ^
/home/max/Documents/JMLGPT/openjml/specs/java/lang/CharSequence.jml:54: verify: Precondition conjunct is false: astart + len <= a.length
                 astart+len <= a.length && bstart + len <= b.length;
                            ^
4 verification failures

